new name for app

--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "honkr",
+  "name": "skewpr",
   "version": "0.1.0",
-  "description": "a place to honk",
+  "description": "a place to skewp",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
